[gd_scene load_steps=15 format=3 uid="uid://bmsvwldhbuyqj"]

[ext_resource type="Script" path="res://scenes/Goal/goal.gd" id="1_p1ocb"]
[ext_resource type="Texture2D" uid="uid://dw17ae0m7kgmx" path="res://assets/pixel-adventure/Items/Checkpoints/End/End (Idle).png" id="1_vm3ue"]
[ext_resource type="Texture2D" uid="uid://oxg5dtwx1mej" path="res://assets/pixel-adventure/Items/Checkpoints/End/End (Pressed) (64x64).png" id="3_ry1rt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i6x35"]
atlas = ExtResource("3_ry1rt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0k4d"]
atlas = ExtResource("3_ry1rt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkxmw"]
atlas = ExtResource("3_ry1rt")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3v3c"]
atlas = ExtResource("3_ry1rt")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdplq"]
atlas = ExtResource("3_ry1rt")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35y5"]
atlas = ExtResource("3_ry1rt")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlm3k"]
atlas = ExtResource("3_ry1rt")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iolr"]
atlas = ExtResource("3_ry1rt")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yv2bb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vm3ue")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6x35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0k4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkxmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3v3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdplq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlm3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iolr")
}],
"loop": false,
"name": &"pressed",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f571"]
size = Vector2(34, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl1pj"]
size = Vector2(34, 8)

[node name="Goal" type="StaticBody2D"]
z_index = -2
script = ExtResource("1_p1ocb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_yv2bb")
animation = &"pressed"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_7f571")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_pl1pj")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
